# pyproject.toml
[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]

[tool.pylint."MESSAGES CONTROL"]
disable = [
  "unspecified-encoding",
  "line-too-long",
  "wrong-import-order",
  "too-many-branches",
  "too-many-lines",
  "too-many-statements",
  "too-many-instance-attributes",
  "too-many-arguments",
  "too-many-locals",
  "too-few-public-methods",
  "invalid-name",
  "consider-using-f-string",
  "consider-using-with",
  "missing-class-docstring",
  "missing-function-docstring",
  "missing-module-docstring",
  "pointless-string-statement",
  "cyclic-import",
  "duplicate-code",
]
enable = [
  "useless-suppression",
  "use-symbolic-message-instead",
]

[tool.pylint.CLASSES]
defining-attr-methods = [
  "__init__",
  "__new__",
  "setUp",
  "__post_init__",
  "initialize",
  "__array_finalize__",
  "setup_class", "setup_method",  # for tests
]

[tool.pylint.FORMAT]
max-line-length = 132

[tool.codespell]
skip = ".git,*docs/build"
ignore-words-list = "pres"

[tool.isort]
known_first_party = ["pyro"]
